--- a/report/figure-chart-score-window.tex
+++ b/report/figure-chart-score-window.tex
@@ -79,7 +79,7 @@
   \end{tikzpicture}
   \caption{The score against window size for the \texttt{static} model variants with
     the additive composition operation.}
-  \label{fig:score-window-static}
+  \label{chart:score-window-static}
 \end{figure}
 
 \begin{figure}
@@ -146,7 +146,7 @@
   \end{tikzpicture}
   \caption{The score against window size for the \texttt{contextual} model variants with
     the additive composition operation.}
-  \label{fig:score-window-contextual}
+  \label{chart:score-window-contextual}
 \end{figure}
 
 \begin{figure}
@@ -213,5 +213,5 @@
   \end{tikzpicture}
   \caption{The score against window size for the \texttt{pooled} model variants with
     the additive composition operation.}
-  \label{fig:score-window-pooled}
+  \label{chart:score-window-pooled}
 \end{figure}
