--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -132,18 +132,19 @@
 
 \begin{document}
 
-\title{Graded word similarity in context by composing static and contextual embeddings}
+\title{SemEval-2020 Task 3: Graded Word Similarity in Context by Composing Pre-trained Embeddings}
 \author{Tim Lawson}
 \date{\today}
 
 \maketitle
+
+\import*{.}{figure-table.tex}
 
 \import*{.}{section-introduction.tex}
 \import*{.}{section-task-definition.tex}
 \import*{.}{section-related-work.tex}
 \import*{.}{section-methodology.tex}
 \import*{.}{section-results.tex}
-\import*{.}{section-discussion.tex}
 \import*{.}{section-conclusion.tex}
 
 \printbibliography
