add finnish para

--- a/report/section-conclusion.tex
+++ b/report/section-conclusion.tex
@@ -3,10 +3,10 @@
 
 In this paper, I have presented the results of a hypothetical submission to
 SemEval-2020 Task 3, ``Graded Word Similarity in Context''.
-The purpose of this evaluation was to compare the performance of static and contextual
-embeddings and their composition within a fixed-size context window on the task of
-predicting the change in the human judgment of similarity of a pair of words in two
-different contexts.
+The purpose of this investigation was to compare the performance of static and
+contextual embeddings and their composition within a fixed-size context window on the
+task of predicting the change in the human judgment of similarity of a pair of words in
+two different contexts.
 I found that contextual embeddings generally outperformed static embeddings, but at a
 significant computational cost, and that composition benefited both static and
 contextual embeddings of sub-word tokens, with highly language-specific dependence on
