--- a/report/section-task-definition.tex
+++ b/report/section-task-definition.tex
@@ -8,8 +8,8 @@ The task is unsupervised: the submissions were evaluated on the CoSimLex dataset
 \parencite[39-42]{Armendariz2020} but only a minimal `practice kit' of fewer than ten
 instances was provided in advance.
 CoSimLex is an extension of SimLex-999 \parencite{Hill2015} that consists of pairs of
-target words and their contexts in four languages: English ($n = 340$), Finnish
-($n = 24$), Croatian ($n = 112$), and Slovene ($n = 111$).
+target words and their contexts in four languages: English ($n = 340$), Finnish ($n =
+  24$), Croatian ($n = 112$), and Slovene ($n = 111$).
 
 The score for the first sub-task was computed by the uncentered (zero-mean) Pearson
 correlation coefficient between the predicted changes in similarity and the human
@@ -20,6 +20,7 @@ This metric is equivalent to the cosine similarity between the two vectors of re
   = \frac{\sum_{i = 1}^{n} \hat{y}_i y_i}{\left( \sum_{i = 1}^{n} \hat{y}_i^2 \right)\left( \sum_{i = 1}^{n} y_i^2 \right)}
   = \frac{\vec{\hat{y}} \cdot \vec{y}}{\norm{\vec{\hat{y}}} \norm{\vec{y}}}
 \end{equation}
-A consequence of this choice of evaluation metric is that composing representations by
-addition or the arithmetic mean produces the same results; hence, I elected to only
-evaluate addition between them.
+Notably, this metric is invariant with respect to multiplication by a scalar quantity,
+so the results of composing an equal number of representations by addition or the
+arithmetic mean are equal.
+Hence, I only investigated addition among the two (\cref{sec:methodology}).
